More query param name fixes.

--- a/views/search.jade
+++ b/views/search.jade
@@ -6,7 +6,7 @@ block content
   form
     input(name = 'wiki-username', type = 'hidden', value = username)
     input(name = 'wiki-repo', type = 'hidden', value = repo)
-    input(name = 'q', type = 'text', value = query)
+    input(name = 'wiki-q', type = 'text', value = query)
     button Search
 
   section
